udpate json version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
+//update to newer version of json
+
 {
   "name": "MyMongoCom",
-  "version": "1.0.0",
+  "version": "2.2.0",
   "description": "chat using sockets",
   "main": "server.js",
   "scripts": {
